--- a/spagame.client/src/index.css
+++ b/spagame.client/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: linear-gradient(#2A00B7, #42006C);
 }
 
 h1 {
